# humitron

./: .env.example  .gitignore  AI_RULES.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  SECURITY_AUDIT.md  bandit-report.html  bandit-report.txt  build-check.bat  build.ps1  config.yaml  humitron_core.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyinstaller.spec  pyproject.toml  requirements-lock.txt  requirements.txt  tailwind.config.js  test_humitron.py  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  codeql.yml  dependabot.yml  release.yml
humitron/: __init__.py
humitron/config/: __init__.py  settings.py
humitron/mcp/: client.py
humitron/models/: __init__.py  agent.py  tools.py
humitron/observability/: trajectory.py
humitron/performance/: token_budget.py
humitron/tools/: __init__.py  bash.py  file_ops.py  registry.py  web.py
scripts/: __init__.py  benchmark.py  build_backend.py  deploy.py
src/: App.tsx  __init__.py  agent.py  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: __init__.py  client.ts  server.py
src/components/: CostMeter.tsx
src/components/Chat/: ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx  ThinkingPanel.tsx  ToolCallCard.tsx  index.ts
src/components/CostMeter/: CostMeter.tsx  index.ts
src/components/Header/: Header.tsx
src/components/Icons/: ProviderIcons.tsx
src/components/Providers/: AddProviderDialog.tsx  ProviderCard.tsx  ProvidersPage.tsx  index.ts
src/components/Settings/: SettingsPanel.tsx
src/components/Sidebar/: NewSessionDialog.tsx  SessionItem.tsx  Sidebar.tsx  index.ts
src/components/Welcome/: WelcomeScreen.tsx
src/config/: __init__.py  loader.py
src/context/: ConfigContext.tsx  SessionContext.tsx  ThemeContext.tsx
src/hooks/: useBackend.ts  useChat.ts  useProviders.ts
src/humitron/: __init__.py  agent.py
src/humitron/config/: loader.py
src/humitron/llm/: __init__.py  providers.py
src/humitron/mcp/: __init__.py  client.py
src/humitron/memory/: __init__.py  conversation.py
src/humitron/models/: __init__.py  agent.py  tools.py
src/humitron/observability/: __init__.py  trajectory.py
src/humitron/orchestrator/: planner.py
src/humitron/performance/: __init__.py  token_budget.py
src/humitron/tools/: bash.py  file_ops.py  registry.py  web.py
src/humitron/utils/: __init__.py  logging.py  safety.py
src/memory/: __init__.py  conversation.py
src/models/: agent.py  tools.py
src/orchestrator/: __init__.py  planner.py
src/tools/: __init__.py  bash.py  file_ops.py  web.py
src/types/: index.ts  providers.ts
src/ui/: __init__.py  cli.py
src/utils/: cn.ts  helpers.ts  logging.py  safety.py
tests/: __init__.py  test_agent.py  test_config.py  test_json_parsing.py  test_memory.py  test_tools.py
