[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humitron"
version = "0.1.0"
description = "Local-first AI agent with ReAct loop, Ollama support, and optional cloud burst"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "duckduckgo-search>=6.3.0",
]
optional-dependencies = {
    "dev" = [
        "pytest>=8.2.0",
        "pytest-asyncio>=0.23.0",
        "pytest-mock>=3.12.0",
        "ruff>=0.5.0",
        "black>=24.4.0",
        "mypy>=1.10.0",
    ],
    "cloud" = [
        "fastapi>=0.111.0",
        "uvicorn>=0.30.0",
        "python-dotenv>=1.0.0",
    ]
}

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "black>=24.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/humitron/humitron"
Repository = "https://github.com/humitron/humitron"
Issues = "https://github.com/humitron/humitron/issues"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in default args
]
per-file-ignores = {
    "test_*.py": ["S101", "S106"],  # allow assert and hardcoded passwords in tests
}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | venv
  | env
  | dist
  | build
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "duckduckgo_search"
ignore_missing_imports = true