[project]
name = "humitron"
version = "0.2.0"
description = "Local-first AI Agent with MCP Integration, Memory, and Multi-Agent Support"
readme = "README.md"
authors = [{name = "Humitron Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "black>=24.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "pyinstaller>=6.7.0",
]
cloud = [
    "openai>=1.30.0",
    "anthropic>=0.30.0",
]

[project.scripts]
humitron = "humitron.ui.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501", "UP006"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"