[package]
name = "humitron"
version = "0.2.0"
description = "Local-first AI Agent with MCP Integration"
authors = ["Humitron Contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [
    "macos-private-api",
    "shell",
    "fs",
    "dialog",
    "opener",
    "http",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }